--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,48 @@
-body, html {
-  margin: 0;
-  padding: 0;
-  min-height: 100vh;
-  background: #141E30;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to top, #243B55, #141E30);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to top, #243B55, #141E30); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-}
-
-
-
-.container_padre{
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .logo{
-  width: 400px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  width: 500px;
+  max-width: 100%;
+  animation: latidos 1.2s infinite;
+
 }
 
-.spinner-container{
-  margin-top: 3rem;
+
+
+
+
+@keyframes latidos {
+  from { transform: none; }
+  50% { transform: scale(1.3); }
+  to { transform: none; }
 }
+
+@media only screen and (max-width: 990px) {
+  .logo{
+    margin-top: 30px;
+    margin-bottom: 30px;
+    width: 250px;
+    max-width: 100%;
+    animation: latidos 1.2s infinite;
+  
+  }
+
+  .button{
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    width: 100%;
+  }
+
+  .card-pokemon{
+    margin-top: 50px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    max-width: 450px;
+    height: auto;
+    margin-bottom: 50px;
+    }
+  
+}
+
+
