--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
-body {
+  
+body, html {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  min-height: 100vh;
+  background: #141E30;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to top, #243B55, #141E30);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to top, #243B55, #141E30); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+.imagen__contenedor{
+  margin-top: 3rem;
+  margin-bottom: 3rem; 
+  display: flex;
+  justify-content:center;
 }
+
+.app{
+  min-height: 86vh;
+}
+
+.footer{
+  height: auto;
+  padding:6px !important;
+  display: flex;
+  justify-content:center;
+}
+
